# Cpp-Socket-Based-REST-API-Server

./: CMakeLists.txt  README.md
include/: HttpParser.h  httpRouter.h  responses.h
src/: HttpRouter.cpp  server.cpp
